[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "MGDA_pp"
version = "0.1.0"
description = "Source code for the paper Toward Finding Strong Pareto Optimal Policies in Multi-Agent Reinforcement Learning"
readme = "README.md"
authors = [{ name = "giangbang", email = "banggiangle2015@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["Strong Pareto", "MARL", "pytorch"]
dependencies = [
    "numpy<2.0.0",
    "autograd",
    "matplotlib",
    "cvxpy",
    "cvxopt",
    "matplotlib-label-lines",
    "tensorboardX",
    "setproctitle"
]
requires-python = ">=3.0"

[tool.setuptools]
packages = ["onpolicy", "toy_experiments"]

[project.urls]
Homepage = "https://github.com/giangbang/Strong-Pareto-MARL"

